首页特效未完成

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <script type="text/javascript" src="assets/js/flexible.js"></script>
+    <title>饿了么</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_400092_naip9ag19nt57b9.css">
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_400092_04ww5bg254abrzfr.css">
+    <script type="text/javascript" src="assets/js/flexible.js"></script>
+    <script type="text/javascript" src="assets/js/zepto.min.js"></script>
+    <script type="text/javascript" src="assets/js/zepto-touch.js"></script>
+    <script type="text/javascript" src="assets/js/fx.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
 </head>
 
 <body>
@@ -91,12 +95,146 @@
             <div class="tuijian">
                 <h2>推荐商家</h2>
                 <div>
-                    <img src="assets/image/2017082923512498644.png">
-                    <h3>张亮麻辣烫(崇文门店)</h3>
+                    <div>
+                        <img src="assets/image/2017083014392922502.png">
+                    </div>
+                    <div>
+                        <div class="item-t">
+                            <h3>金百万烤鸭（温都水城店）</h3>
+                            <span>
+                    	 	<i>保</i>
+                    	 	<i>票</i>
+                    	 </span>
+                        </div>
+                        <div class="item-shop">
+                            <span>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen"></i>
+	                        	<p>4.4 月售3430单</p>
+	                        </span>
+                            <span>
+	                        	<i>准时达</i>
+	                        	<i>蜂鸟专送</i>
+	                        </span>
+                        </div>
+                        <div class="item-send">
+                            <span>
+                        		￥20起送
+                        		<i>|</i>
+                        		配送费￥4
+                        	</span>
+                            <span>
+                        		3.0km
+                        		<i>|</i>
+                        		41分钟
+                        	</span>
+                        </div>
+                        <div class="item-shou">
+                            <span>
+                        		<i class="i-qian shou">首</i>新用户下单立减17.0元
+                        	</span>
+                            <span class="down">15个活动<i class="iconfont icon-f11"></i></span>
+                        </div>
+                        <div class="item-jian">
+                            <i class="i-qian jian">减</i>满30减15，满50减25，满80减40
+                        </div>
+                        <div class="item-down">
+                            <div> <i class="i-qian te">特</i>烤鸭季59.9元，每位超值！</div>
+                            <div> <i class="i-qian te">特</i>炸酱面+土豆丝只要14.9元</div>
+                            <div> <i class="i-qian te">特</i>25元金百万招牌烤鸭，惊爆！！</div>
+                            <div> <i class="i-qian fan">返</i>下单可返5元代金券</div>
+                            <div> <i class="i-qian te">特</i>37元共享双人套餐</div>
+                            <div> <i class="i-qian zhe">折</i>单人餐“5”折尊享~~</div>
+                            <div> <i class="i-qian te">特</i>13.99元小低温炖猪脆排（饭单点）</div>
+                            <div> <i class="i-qian te">特</i>8.99元小炒豆芽（饭单点）</div>
+                            <div><i class="i-qian te">特</i>39.9元蜀香酸菜鱼</div>
+                            <div> <i class="i-qian te">特</i>39.9元青椒鱼柳，嘎嘎香~~~</div>
+                            <div> <i class="i-qian te">特</i>重庆毛血旺特价39.9元</div>
+                            <div> <i class="i-qian te">特</i>小榄菜肉末四季豆（饭单点）8.99元</div>
+                            <div> <i class="i-qian te">特</i>消暑酷爽冰粥（绿豆）5.99元</div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <img src="assets/image/2017083014540959855.png">
+                    </div>
+                    <div>
+                        <div class="item-t">
+                            <h3>田老师红烧肉（北七家宏富...</h3>
+                            <span>
+                    	 	<i>保</i>
+                    	 </span>
+                        </div>
+                        <div class="item-shop">
+                            <span>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<i class="iconfont icon-pingfen has"></i>
+	                        	<p>4.8 月售1611单</p>
+	                        </span>
+                            <span>
+                            	<i>准时达</i>
+	                        	<i>蜂鸟专送</i>
+	                        </span>
+                        </div>
+                        <div class="item-send">
+                            <span>
+                        		￥20起送
+                        		<i>|</i>
+                        		配送费￥5
+                        	</span>
+                            <span>
+                        		3.0km
+                        		<i>|</i>
+                        		31分钟
+                        	</span>
+                        </div>
+                        <div class="item-shou">
+                            <span>
+                        		<i class="i-qian shou">首</i>新用户下单立减17.0元
+                        	</span>
+                            <span class="down">9个活动<i class="iconfont icon-f11"></i></span>
+                        </div>
+                        <div class="item-jian">
+                            <i class="i-qian jian">减</i>满40减20
+                        </div>
+                        <div class="item-down">
+                            <div> <i class="i-qian te">特</i>1元特惠</div>
+                            <div> <i class="i-qian te">特</i>23元特惠</div>
+                            <div> <i class="i-qian te">特</i>19.9元特惠</div>
+                            <div> <i class="i-qian te">特</i>21元特惠</div>
+                            <div> <i class="i-qian te">特</i>16元特惠！！！</div>
+                            <div> <i class="i-qian te">特</i>18元特惠</div>
+                            <div> <i class="i-qian zhe">折</i>五折美食</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <footer></footer>
+        <footer>
+            <a href="javascript:;" class="choose">
+                <i class="iconfont icon-eliaomo"></i>
+                <p>外卖</p>
+            </a>
+            <a href="javascript:;">
+                <i class="iconfont icon-faxian"></i>
+                <p>发现</p>
+            </a>
+            <a href="javascript:;">
+                <i class="iconfont icon-dingdan"></i>
+                <p>订单</p>
+            </a>
+            <a href="javascript:;">
+                <i class="iconfont icon-wode"></i>
+                <p>我的</p>
+            </a>
+        </footer>
     </div>
 </body>
 
