--- a/faxian.html
+++ b/faxian.html
@@ -6,13 +6,11 @@
     <title>饿了么</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/faxian.css">
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_400092_0wxulvwl047mygb9.css">
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_400092_ah05pl9tg7ujtt9.css">
     <script type="text/javascript" src="assets/js/flexible.js"></script>
     <script type="text/javascript" src="assets/js/zepto.min.js"></script>
     <script type="text/javascript" src="assets/js/zepto-touch.js"></script>
     <script type="text/javascript" src="assets/js/fx.js"></script>
-    <!--     <script type="text/javascript" src="assets/js/index.js"></script>
- -->
 </head>
 
 <body>
@@ -75,21 +73,21 @@
                 </div>
                 <div class="section">
                     <div>
-                        <div>
+                        <a href="javascript:;">
                             <img src="assets/image/2017083022501676093.png">
                             <p>绿咖喱鸡</p>
                             <p>￥66</p>
-                        </div>
-                        <div>
+                        </a>
+                        <a href="javascript:;">
                             <img src="assets/image/2017083022534058945.png">
                             <p>秘制凉皮</p>
                             <p>￥10</p>
-                        </div>
-                        <div>
+                        </a>
+                        <a href="javascript:;">
                             <img src="assets/image/2017083022545791002.png">
                             <p>安格斯肥牛饭</p>
                             <p>￥20</p>
-                        </div>
+                        </a>
                     </div>
                     <a href="javascript:;">查看更多></a>
                 </div>
@@ -113,29 +111,73 @@
                 </div>
                 <div class="section">
                     <div>
-                        <div>
-                            <img src="assets/image/2017083022501676093.png">
-                            <p>香辣馋嘴牛蛙四...</p>
-                            <p>￥128 <span>￥187</span></p>
-                        </div>
-                        <div>
-                            <img src="assets/image/2017083022534058945.png">
+                        <a href="javascript:;">
+                            <img src="assets/image/2017083109300684303.png">
+                            <p>双排王者套餐</p>
+                            <p>￥43.56 <span>￥66</span></p>
+                            <span>6.6.折</span>
+                        </a>
+                        <a href="javascript:;">
+                            <img src="assets/image/1504142727055.png">
                             <p>八素四荤2.5份米线</p>
                             <p>￥26 <span>￥65</span></p>
-                        </div>
-                        <div>
-                            <img src="assets/image/2017083022545791002.png">
-                            <p>超级情侣双人餐</p>
-                            <p>￥57 <span>￥114</span></p>
-                        </div>
+                            <span>4.0折</span>
+                        </a>
+                        <a href="javascript:;">
+                            <img src="assets/image/2017083109321675195.png">
+                            <p>雪糕鸡棒优惠套餐</p>
+                            <p>￥12 <span>￥40</span></p>
+                            <span>3.0折</span>
+                        </a>
                     </div>
                     <a href="javascript:;">查看更多></a>
                 </div>
                 <div class="tiao"></div>
             </section>
+            <section>
+                <div class="header">
+                    <h2>
+                        <div>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <i class="iconfont icon-naozhong"></i>
+                        限时好礼
+                        <div>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </h2>
+                    <p>小积分换豪礼</p>
+                </div>
+                <div class="section">
+                    <div>
+                        <a href="javascript:;">
+                            <img src="assets/image/2017083109353868640.png">
+                            <p>0元好物</p>
+                            <span>7折起兑</span>
+                        </a>
+                        <a href="javascript:;">
+                            <img src="assets/image/2017083109363770661.png">
+                            <p>翻牌赢苹果</p>
+                            <p>399积分</p>
+                            <span>抽奖活动</span>
+                        </a>
+                        <a href="javascript:;">
+                            <img src="assets/image/2017083109371218476.png">
+                            <p>积分大放价 5000...</p>
+                            <p>399积分</p>
+                            <span>0元抽奖</span>
+                        </a>
+                    </div>
+                    <a href="javascript:;">查看更多></a>
+                </div>
+                <div class="tiao"></div>
+            </section>
+            <div class="di"></div>
         </section>
-        <!--   <footer>
-            <a href="javascript:;">
+        <footer>
+            <a href="./index.html">
                 <i class="iconfont icon-eliaomo"></i>
                 <p>外卖</p>
             </a>
@@ -143,15 +185,15 @@
                 <i class="iconfont icon-faxian"></i>
                 <p>发现</p>
             </a>
-            <a href="javascript:;">
+            <a href="./ding.html">
                 <i class="iconfont icon-dingdan"></i>
                 <p>订单</p>
             </a>
-            <a href="javascript:;">
+            <a href="./my.html">
                 <i class="iconfont icon-wode"></i>
                 <p>我的</p>
             </a>
-        </footer> -->
+        </footer>
     </div>
 </body>
 
